tests/react_functional/react_functional.exp
Error ------------------------------------------------------------------------------------------------------ test.js:6:2

Cannot create `F` element because property `foo` is missing in props [1] but exists in object type [2]. [prop-missing]

   test.js:6:2
   6| <F />; // error: missing `foo`
       ^

References:
   test.js:6:1
   6| <F />; // error: missing `foo`
      ^^^^^ [1]
   test.js:3:19
   3| function F(props: { foo: string }) {
                        ^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:7:9

Cannot create `F` element because number [1] is incompatible with string [2] in property `foo`. [incompatible-type]

   test.js:7:9
   7| <F foo={0} />; // error: number ~> string
              ^ [1]

References:
   test.js:3:26
   3| function F(props: { foo: string }) {
                               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:17:2

Cannot create `Z` element because number [1] is not a React component. [not-a-component]

   test.js:17:2
   17| <Z />; // error, expected React component
        ^

References:
   test.js:16:9
   16| var Z = 0;
               ^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:17:2

Cannot instantiate `React.Element` because in type argument `ElementType`: [incompatible-type-arg]
 - Either number [1] is incompatible with string [2].
 - Or number [1] is incompatible with AbstractComponent [3].

   test.js:17:2
    17| <Z />; // error, expected React component
         ^

References:
   test.js:16:9
    16| var Z = 0;
                ^ [1]
   <BUILTINS>/react.js:162:5
   162|   | string
            ^^^^^^ [2]
   <BUILTINS>/react.js:163:5
   163|   | React$AbstractComponent<empty, mixed>;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]



Found 4 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
